[gd_scene load_steps=18 format=3 uid="uid://dedrrnd1ih7fq"]

[ext_resource type="Script" path="res://MyChar/CharacterBody2D.gd" id="1_no6ae"]
[ext_resource type="Script" path="res://Scripts/StateMachine.gd" id="2_24dq8"]
[ext_resource type="Texture2D" uid="uid://doccyyc3nx14j" path="res://MyChar/Arms.png" id="2_i65us"]
[ext_resource type="Script" path="res://MyChar/Arms.gd" id="3_1wstj"]
[ext_resource type="AudioStream" uid="uid://dne3eu3x6qeh8" path="res://SFX/jump.wav" id="3_66tma"]
[ext_resource type="Script" path="res://MyChar/ActNormal.gd" id="3_otvx8"]
[ext_resource type="Script" path="res://MyChar/CameraOffset.gd" id="3_px6fk"]
[ext_resource type="SpriteFrames" uid="uid://dqgpdbk4dwb6x" path="res://MyChar/anim_quote.tres" id="4_3dw6f"]
[ext_resource type="AudioStream" uid="uid://bbtvsn6msmw6r" path="res://SFX/polar_star_l1_2.wav" id="4_3ul87"]
[ext_resource type="AudioStream" uid="uid://bmpdm1dy7rdtx" path="res://SFX/thud.wav" id="4_8up7a"]
[ext_resource type="AudioStream" uid="uid://sq8ii6wgqmpf" path="res://SFX/walk.wav" id="5_6enqr"]
[ext_resource type="AudioStream" uid="uid://cmvrhrhdg3f6x" path="res://SFX/bonk.wav" id="6_k7g6n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tbmgy"]
atlas = ExtResource("2_i65us")
region = Rect2(48, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhwpb"]
atlas = ExtResource("2_i65us")
region = Rect2(48, 48, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fx5q"]
atlas = ExtResource("2_i65us")
region = Rect2(48, 80, 24, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_llpam"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbmgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhwpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fx5q")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_d6ins"]
custom_solver_bias = 1.0
slide_on_slope = true

[node name="MyChar" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_no6ae")

[node name="Arms" type="Node2D" parent="."]
script = ExtResource("3_1wstj")

[node name="ArmsSprite" type="AnimatedSprite2D" parent="Arms"]
position = Vector2(4, 0)
sprite_frames = SubResource("SpriteFrames_llpam")
autoplay = "default"

[node name="sfxPolarStar1" type="AudioStreamPlayer" parent="Arms"]
stream = ExtResource("4_3ul87")

[node name="SpawnSide" type="Marker2D" parent="Arms"]
position = Vector2(12, 3)

[node name="SpawnUp" type="Marker2D" parent="Arms"]
position = Vector2(1, -9)

[node name="SpawnDown" type="Marker2D" parent="Arms"]
position = Vector2(1, 10)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_24dq8")
initial_state = NodePath("ActNormal")

[node name="ActNormal" type="Node" parent="StateMachine" node_paths=PackedStringArray("body")]
script = ExtResource("3_otvx8")
body = NodePath("../..")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("4_3dw6f")
animation = &"walk_forward"
autoplay = "walk_forward"

[node name="RayFloorLeft" type="CollisionShape2D" parent="."]
position = Vector2(-3, 2)
scale = Vector2(0.3, 0.3)
shape = SubResource("SeparationRayShape2D_d6ins")

[node name="RayFloorRight" type="CollisionShape2D" parent="."]
position = Vector2(3, 2)
scale = Vector2(0.3, 0.3)
shape = SubResource("SeparationRayShape2D_d6ins")

[node name="RayLeftBottom" type="CollisionShape2D" parent="."]
position = Vector2(1, 5)
rotation = 1.57081
scale = Vector2(0.3, 0.3)
shape = SubResource("SeparationRayShape2D_d6ins")

[node name="RayLeftTop" type="CollisionShape2D" parent="."]
position = Vector2(1, -5)
rotation = 1.57081
scale = Vector2(0.3, 0.3)
shape = SubResource("SeparationRayShape2D_d6ins")

[node name="RayRightBottom" type="CollisionShape2D" parent="."]
position = Vector2(-1, 5)
rotation = -1.57079
scale = Vector2(0.3, 0.3)
shape = SubResource("SeparationRayShape2D_d6ins")

[node name="RayRightTop" type="CollisionShape2D" parent="."]
position = Vector2(-1, -5)
rotation = -1.57079
scale = Vector2(0.3, 0.3)
shape = SubResource("SeparationRayShape2D_d6ins")

[node name="RayCeilingLeft" type="CollisionShape2D" parent="."]
position = Vector2(-2, -2)
rotation = 3.14159
scale = Vector2(0.3, 0.3)
shape = SubResource("SeparationRayShape2D_d6ins")

[node name="RayCeilingRight" type="CollisionShape2D" parent="."]
position = Vector2(2, -2)
rotation = 3.14159
scale = Vector2(0.3, 0.3)
shape = SubResource("SeparationRayShape2D_d6ins")

[node name="CameraOffset" type="Marker2D" parent="."]
position = Vector2(55, 1)
gizmo_extents = 3.0
script = ExtResource("3_px6fk")
camera_range = 64
camera_offset = Vector2(0, -8)

[node name="SFX" type="Node" parent="."]

[node name="sfxJump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_66tma")

[node name="sfxThud" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_8up7a")

[node name="sfxWalk" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_6enqr")

[node name="sfxBonk" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_k7g6n")
